--- a/trunk/perldoc/ko/perl/5.10/perlfunc.pod
+++ b/trunk/perldoc/ko/perl/5.10/perlfunc.pod
@@ -3350,11 +3350,11 @@ the die operator is used to raise exceptions.
 
 =end original
 
-C<eval> は、致命的エラーとなるようなものをトラップすることができますから、
-(C<socket> や C<symlink> といった) 特定の機能が実装されているかを、
-調べるために使うことができることに注意してください。
-die 演算子が例外を発生させるものとすれば、
-これはまた、Perl の例外捕捉機能と捉えることもできます。
+C<eval> 은 치명적인 에러가 될 것 같은 것을 트랩할 수 있기 때문에 
+(C<socket> 이나 C<symlink> 같은) 특정의 기능이 구성되었는 가를 
+조사기 위해 사용할 수 있다는 것에 주의해주세요.
+die 연산자가 예외를 발생시키는 것이라면, 
+이것은 또, Perl 의 예외보충기능으로 사용할 수도 있습니다.
 
 =begin original
 
@@ -3365,11 +3365,10 @@ Examples:
 
 =end original
 
-実行するコードが変わらないのであれば、毎回多量の再コンパイルすることなしに、
-実行時エラーのトラップを行なうために、
-eval-BLOCK 形式を使うことができます。
-エラーがあれば、やはり $@ に返されます。
-例:
+실행하는 코드가 변하지 않는다면 매번 다량의 재 컴파일없이 
+실행시 에러의 트랩을 수행하기 위해 eval-BLOCK 형식을 사용할 수 있습니다.
+에러가 있다면 역시 $@ 로 반환됩니다.
+예제:
 
     # make divide-by-zero nonfatal
     eval { $answer = $a / $b; }; warn $@ if $@;
@@ -3393,11 +3392,10 @@ as shown in this example:
 
 =end original
 
-C<eval{}> 形式をライブラリの例外を捕捉するために使うときには
-問題があります。
-現在の C<__DIE__> フックの状態はほぼ確実に壊れているという理由で、
-ユーザーのコードが設定した C<__DIE__> フックを実行したくないかもしれません。
-この目的には以下の例のように、C<local $SIG{__DIE__}> 構造が使えます。
+C<eval{}> 형식을 라이브리 예외를 트랩하기 위해 사용할 때에는 문제가 있습니다.
+현재의 C<__DIE__> 후크의 상태는 거의 확실하게 무너진다는 이유로 
+유저의 코드가 설정한 C<__DIE__> 후크를 설정하고 싶을지도 모ㅂ니다.
+이 목적에는 아래의 예처럼, C<local $SIG{__DIE__}> 구조를 사용할 수 있습니다.
 
     # a very private exception trap for divide-by-zero
     eval { local $SIG{'__DIE__'}; $answer = $a / $b; };
@@ -3410,8 +3408,8 @@ C<die> again, which has the effect of changing their error messages:
 
 =end original
 
-これは特に顕著です。与えられた C<__DIE__> フックは C<die> をもう一度
-呼び出すことができ、これによってエラーメッセージを変える効果があります:
+이것은 특히 원저입니다. 주어진 C<__DIE__> 후크는 C<die> 를 한번 더 
+호출할 수 있고, 이것에 의해 에러 메시를 바꾸는 효과가 있습니다:
 
     # __DIE__ hooks may modify error messages
     {
@@ -3428,8 +3426,8 @@ may be fixed in a future release.
 
 =end original
 
-これは距離の離れた行動であるため、この直感的でない振る舞いは
-将来のリリースでは修正されるかもしれません。
+이것은 거리 먼 행동이기때문에 이 직감적이지 않은 행동은 
+장래의 릴리즈에서는 수정될지도 모르겠습니다.
 
 =begin original
 
@@ -3438,8 +3436,8 @@ being looked at when:
 
 =end original
 
-C<eval> では、以下のような場合に、
-何が調べられるかに特に注意しておくことが必要です:
+C<eval> 에서는 아래처럼 할 경우는 
+무엇이 조사되는 가에 특히 주의할 필요가 있습니다:
 
     eval $x;		# CASE 1
     eval "$x";		# CASE 2
@@ -3465,17 +3463,15 @@ in case 6.
 
 =end original
 
-上記の CASE 1 と CASE 2 の動作は同一で、変数 $x 内の
-コードを実行します。
-(ただし、CASE 2 では、必要のないダブルクォートによって、
-読む人が何が起こるか混乱することでしょう (何も起こりませんが)。)
-同様に CASE 3 と CASE 4 の動作も等しく、$x の値を返す以外に
-何もしない C<$x> というコードを実行します
-(純粋に見た目の問題で、CASE 4 が好まれますが、
-実行時でなくコンパイル時にコンパイルされるという利点もあります)。
-CASE 5 の場合は、通常ダブルクォートを使用します。
-この状況を除けば、CASE 6 のように、単に
-シンボリックリファレンスを使えば良いでしょう。
+위의 CASE 1 과 CASE 2 의 동작은 같고, 변수 $x 안의 코드를 실행합니다.
+(단, CASE 2 에서는 필요하지 않은 쌍따옴표에 의해 
+읽는 사람이 뭔가 일어날지를 헷갈리게 됩니다(아무것도 일어나지 않지만).)
+마찬가지로 CASE 3 와 CASE 4 의 동작도 같고 $x 의 값을 반환하는 이외에 
+아무것도 하지않는 C<$x> 같은 코드를 실행합니다.
+(순전히 겉보기의 문제로 CASE 4 가 선호되지만 실행시가 아닌 
+컴파일 시에 컴파일된ㄴ 이점도 있습니다).
+CASE 5 의 경우는 일반적으로 쌍따옴표를 사용합니다.
+이 상황을 빼면 CASE 6 처럼 단순히 심볼릭 리퍼런스를 사용하면 됩니다.
 
 =begin original
 
@@ -3484,9 +3480,9 @@ C<next>, C<last>, or C<redo> cannot be used to leave or restart the block.
 
 =end original
 
-C<eval BLOCK> はループとして I<扱われません>。
-従って、C<next>, C<last>, C<redo> といったループ制御文でブロックから離れたり
-再実行したりはできません。
+C<eval BLOCK> 은 루프로써 I<취급되지 않습니다>.
+따라서, C<next>, C<last>, C<redo> 같은 루프 제어문에서 블록에서 떨어지거나
+재실행하거나 할 수 없습니다.
 
 =begin original
 
@@ -3497,11 +3493,10 @@ need to worry about this unless you are writing a Perl debugger.
 
 =end original
 
-とても特殊な場合として、C<DB> パッケージ内で C<eval ''> を実行すると、
-通常のレキシカルスコープではなく、これを呼び出した最初の非 DB コード片の
-スコープになります。
-Perl デバッガを書いているのでない限り、普通はこれについて心配する必要は
-ありません。
+매우 특수한 경우로써 C<DB> 패키지 안에서 C<eval ''> 을 실행하면 
+일반적인 렉시컬 스코프가 아닌 이것을 호출한 첫번째의 비 DB 코드 편의 
+영역이 됩니다.
+Perl 디버거를 쓰는 것이 아닌 한, 보통은 이것ㅔ 대해서 걱정할 필요는 없습니다.
 
 =item exec LIST
 X<exec> X<execute>
@@ -3517,10 +3512,10 @@ directly instead of via your system's command shell (see below).
 
 =end original
 
-C<exec> 関数は、システムのコマンドを実行し、I<戻ってはきません>。
-戻って欲しい場合には、C<exec>ではなく C<system> 関数を使ってください。
-コマンドが存在せず、I<しかも> システムのコマンドシェル経由でなく
-直接コマンドを実行しようとした場合にのみこの関数は失敗して偽を返します。
+C<exec> 함수는 시스템 커맨드를 실행하고 I<돌아오지 않습니다>.
+돌아오게 할 경우에는 C<exec> 가 아닌 C<system> 함수를 사용해세요.
+커맨드가 존재하지 않고 I<거기에> 시스템의 커맨드 셸 경유가 아닌 
+직접 커맨드를 실행하려고 한 경우에만 이 함수는 실패해서 거짓을 반환합니다.
 
 =begin original
 
@@ -3532,11 +3527,11 @@ can use one of these styles to avoid the warning:
 
 =end original
 
-C<system> の代わりに C<exec> を使うというよくある間違いを防ぐために、
-引き続く文が C<die>, C<warn>, C<exit>(C<-w> がセットされている場合 -
-でもいつもセットしてますよね) 以外の場合、Perl は警告を出します。
-もし I<本当に> C<exec> の後に他の文を書きたい場合、
-以下のどちらかのスタイルを使うことで警告を回避できます:
+C<system> 대신에 C<exec> 를 사용하는 자주 있느 오용을 방지하기 위해
+이어지는 구문이 C<die>, C<warn>, C<exit>(C<-w> 이 설정되어 있는 경우-
+라도 항상 설정되어 있습니다) 이외의 경우, Perl 은 경고를 냅니다.
+만약 I<정말로> C<exec> 의 뒤에 어떤 구문을 넣고 싶은 경우 
+아래중 어느쪽의 스타일을 사용하는 것으로 경고를 피할 수 있습니다.
 
     exec ('foo')   or print STDERR "couldn't exec foo: $!";
     { exec ('foo') }; print STDERR "couldn't exec foo: $!";
@@ -3555,15 +3550,15 @@ Examples:
 
 =end original
 
-LIST に複数の引数がある場合か、LIST が複数の値を持つ
-配列の場合には、LIST の引数を使って、execvp(3) を呼び出します。
-1 つのスカラ引数のみまたは要素が 1 つの配列の場合には、その引数から
-シェルのメタ文字をチェックし、もし、メタ文字があれば、
-引数全体をシステムのコマンドシェル(これはUnix では
-C</bin/sh -c> ですが、システムによって異なります)に渡して解析させます。
-もし、メタキャラクタがなければ、その引数を単語に分け、
-より効率的な C<execvp> に直接渡します。
-例:
+LIST 에 복수의 인수가 있는 경우나 LIST 가 복수의 값을 가진 배열인 경우에는
+LIST 의 인수ㄹ 사용해서 execvp(3) 을 호출합니다.
+하나의 스칼라변수만 똔느 요소가 하나의 배열의 경우에는 그 인수에서 
+셸의 메타문자를 체크해서 만약 메타문자가 있으면, 
+인수전체를 시스템의 커맨드셸(이것인 Unix 에서는 C</bin/sh -c> 입니다만
+시스템에 따라 다릅니다)에 건내서 해석시킵니다.
+만약 메타캐릭터가 없으면 그 인수를 단어로 나눠서 보다 효율적인 C<execvp>에
+직접 건냅니다.
+예제:
 
     exec '/bin/echo', 'Your arguments are: ', @ARGV;
     exec "sort $outfile | uniq";
@@ -3579,13 +3574,12 @@ the list.)  Example:
 
 =end original
 
-第一引数に指定するものを本当に実行したいが、実行する
-プログラムに対して別の名前を教えたい場合には、LISTの前に、
-「間接オブジェクト」(コンマなし) として、実際に
-実行したいプログラムを指定することができます。
-(これによって、LIST に単一のスカラしかなくても、複数
-値のリストであるように、LIST の解釈を行ないます。)
-例:
+첫번째 인수에 지정하는 것을 정말 실행하고 싶지만, 실행하는 프로그램에 대해
+다른 이름을 가르쳐주고 싶은 경우에는 LIST 의 앞에 "간접오브젝트"(컴마없이)
+로써 실제로 실행하고 싶은 프로그램을 지정할 수 있습니다.
+(이것에 의해 LIST 에 단일의 스칼라밖에 없어도 복수 값의 리스트처럼 
+LIST 해석을 수행합니다)
+예제:
 
     $shell = '/bin/csh';
     exec $shell '-sh';		# pretend it's a login shell
@@ -3596,7 +3590,7 @@ or, more directly,
 
 =end original
 
-あるいは、より直接的に、
+혹은 보다 직접적으로,
 
     exec {'/bin/csh'} '-sh';	# pretend it's a login shell
 
@@ -3608,9 +3602,9 @@ for details.
 
 =end original
 
-引数がシステムシェルで実行されるとき、結果はシェルの奇癖と能力によって
-変わります。
-詳細については L<perlop/"`STRING`"> を参照してください。
+인수가 시스템셸에서 실행될 때, 결과는 셸의 기벽과 능력에 의해 
+바뀝니다.
+자세한 내용은 L<perlop/" STRING "> 을 참조해주세요.
 
 =begin original
 
