--- a/trunk/perldoc/ko/perl/5.10/perlfunc.pod
+++ b/trunk/perldoc/ko/perl/5.10/perlfunc.pod
@@ -3916,12 +3916,12 @@ on improper numeric conversions.
 
 =end original
 
-C<fcntl> からの返り値のチェックに C<defined> を使う必要はありません。
-C<ioctl> と違って、C<fnctl> はシステムコールの結果が C<0> だった場合は
-C<"0 だが真">を返します。
-この文字列は真偽値コンテキストでは真となり、
-数値コンテキストでは C<0> になります。
-これはまた、不適切な数値変換に関する通常の B<-w> 警告を回避します。
+C<fcntl> 에서 반환값의 체크에 C<defined> 를 사용할 필요는 없습니다.
+C<ioctl> 과는 달리 C<fnctl> 은 시스템 호출의 결과가 C<0> 인 경우는 
+C<"0 이지만 참"> 을 반환합니다.
+이 문자열은 참 거짓 값 컨텍스트에서는 참이기에 
+숫자값 컨텍스트에서는 C<0> 이 됩니다.
+이것은 또, 부적절한 숫자변환에 관해 일반적으로 B<-w> 경고를 회피합니다.
 
 =begin original
 
@@ -3931,10 +3931,10 @@ manpage to learn what functions are available on your system.
 
 =end original
 
-fcntl(2) が実装されていないマシンでは、C<fcntl>は致命的エラーを
-引き起こすことに注意してください。
-システムでどの関数が利用可能かについては Fcntl モジュールや
-fcntl(2) man ページを参照してください。
+fcntl(2) 이 구성되어 있지 않은 머신에서는 C<fcntl> 은 치명적인 에러를
+발생시키는 것에 주의í세요.
+시스템에서 어느 함수가 이용가능한 가에 대해서는 Fcntl 모듈나 
+fcntl(2) man 페이지를 참조해주세요.
 
 =begin original
 
@@ -3944,9 +3944,9 @@ on your own, though.
 
 =end original
 
-これは C<REMOTE> というファイルハンドルをシステムレベルで
-非ブロックモードにセットする例です。
-ただし、 C<$|> を自分で管理しなければなりません。
+이것은 C<REMOTE> 라는 파일핸들을 시스템레벨에서 
+비 블록모드로 설정하는 예제입니다.
+단, C<$|> 을 자신이 관리하지 않으면 안됩니다.
 
     use Fcntl qw(F_GETFL F_SETFL O_NONBLOCK);
 
@@ -3969,12 +3969,12 @@ filehandle, generally its name.
 
 =end original
 
-ファイルハンドルに対するファイル記述子を返します。
-ファイルハンドルがオープンしていない場合は未定義値を返します。
-これは主に C<select> や低レベル POSIX tty 操作に対する、ビットマップを
-構成するときに便利です。
-FILEHANDLE が式であれば、
-その値が間接ファイルハンドル(普通は名前)として使われます。
+파일핸들에 대한 파일 기술자를 반환합니다.
+파일핸들이 오픈되어있지 않은 경우는 미정의값을 반환합니다.
+이것은 주로 C<select> 나 저레벨 POSIX tty 조작에 대해 비트맵을 
+구성할 때에 편리합니다.
+파일핸들이 식이면 
+그 값이 간접 파일핸들(보통은 이름)으로 사용됩니다.
 
 =begin original
 
@@ -3983,8 +3983,8 @@ same underlying descriptor:
 
 =end original
 
-これを、二つのハンドルが同じ識別子を参照しているかどうかを見つけるのに
-使えます:
+이것은 두개의 핸들이 같은 식별자를 참조하고 있는지 어떤지 발견하는 것에
+사용할 수 있습니다:
 
     if (fileno(THIS) == fileno(THAT)) {
 	print "THIS and THAT are dups\n";
@@ -3997,9 +3997,8 @@ return undefined even though they are open.)
 
 =end original
 
-(C<open> の新機能によってメモリに接続されたファイルハンドルは、
-開いている時でも未定義値を返します。)
-
+(C<open> 의 신기능에 대해서 메모리에 접속된 파일핸들은 열려 있는 때에도
+미정의 값을 반환합니다)
 
 =item flock FILEHANDLE,OPERATION
 X<flock> X<lock> X<locking>
@@ -4014,12 +4013,12 @@ only entire files, not records.
 
 =end original
 
-FILEHANDLE に対して flock(2)、またはそのエミュレーションを呼び出します。
-成功時には真を、失敗時には偽を返します。
-flock(2), fcntl(2) ロック, lockf(3) のいずれかを実装していない
-マシンで使うと、致命的エラーが発生します。
-C<flock> は Perl の移植性のあるファイルロックインターフェースです。
-しかしレコードではなく、ファイル全体のみをロックします。
+FILEHANDLE 에 대해서 flock(2) 또는 그 에뮬레이터를 호출합니다.
+성공시에는 참을 실패시에는 거짓을 반환합니다.
+flock(2), fcntl(2) ロック, lockf(3) 중 어느 것을 
+구성하지 않은 머신을 사용하면 치명적인 에러가 발생합니다.
+C<flock> 은 Perl 의 이식성 있는 파일잠금 인터페이스입니다.
+그러나 레코드가 아닌 파일 전체만을 잠급니다.
 
 =begin original
 
@@ -4037,19 +4036,19 @@ in the way of your getting your job done.)
 
 =end original
 
-明白ではないものの、伝統的な C<flock> の動作としては、ロックが得られるまで
-無限に待ち続けるものと、B<単に勧告的に> ロックするものの二つがあります。
-このような自由裁量のロックはより柔軟ですが、保障されるものはより少ないです。
-これは、C<flock> を使わないプログラムが C<flock> でロックされたファイルを
-書き換えるかもしれないことを意味します。
-詳細については、L<perlport>、システム固有のドキュメント、システム固有の
-ローカルの man ページを参照してください。
-移植性のあるプログラムを書く場合は、伝統的な振る舞いを仮定するのが
-ベストです。
-(しかし移植性のないプログラムを書く場合は、自身のシステムの性癖(しばしば
-「仕様」と呼ばれます)に合わせて書くことも完全に自由です。
-盲目的に移植性に固執することで、あなたの作業を仕上げるのを邪魔するべきでは
-ありません。)
+명백하지 않은, 전통적인 C<flock> 의 동작으로써는 잠금이 얻기 까지 
+무한하게 계속 가ㄹ 수 있는 것과 B<단순히 권고적인> 잠그는 것이 두개 있습니다.
+이런 자유재량의 록은 보다 유연하지만 보장되는 것은 더 작습니다.
+이것은 C<flock> 을 사용하지 않는 프로그램이 C<flock> 에서 록된 파일을 
+바꿀지도 모르는 것을 의미합니다.
+자세한 내용에 대해서는 L<perlport>, 시스템 고유의 문서, 시스템 고유의 
+로컬 man 페이지를 참조해주세요.
+이식성 있는 프로그램을 쓰는 경우는 전통적인 행동을 가정하는 것이 
+최고입니다.
+(그러나 이식성 없는 프로그램을 쓸 경우는 자신의 시스템 성벽(때로는 사양이라고
+불립니다) 에 맞춰서 ㄱ쓰는 것도 완전히 자유입니다.
+맹목적으로 이식성을 고집하는 것으로 당신의 작업을 하는 것을 방해해야하는 것은
+아닙니다)
 
 =begin original
 
